better system for managing save data, make layer source settings bound to color picker un-bind automatically when dismissed.